package sound;

public interface SoundManager {
    void playActionSound();
    void stopActionSound();
}
