@startuml

title How the sound integration works

package sound{

    class Sound{
        + {static}MONSTER_ATTACK: String
        + {static}GOBLIN_ATTACK: String
        + {static}MENU_BUTTON: String
        + {static}HERO_ATTACK: String
        + {static}LOW_LIFE: String
        + {static}STAIRS: String
        ...
        + {static}playSound(sound: String)

        - loops: String[0..*]
        - delay: Timer

        + {static}loopSound(sound: String)
        + {static}stopSound(sound: String)
        + {static}delaySound(task: TimeTask)
        + {static}stopDelaySound()
    }

    class SoundEntity{
        - attackSound: String[0..*]

        + SoundEntity(attackSound: String[0..*])

        + playActionSound()
    }

    class SoundTile{
        - actionSound: String
        + SoundTile(actionSound: String)

        + playActionSound()
    }

    interface SoundManager{
        + {abstract} playActionSound()
    }
}

Entity --> "1" SoundEntity: -sound
Tile --> "1" SoundTile: -sound

SoundEntity ..|> SoundManager
SoundTile ..|> SoundManager

@enduml